<resources>
    <string name="app_name">RestaurantOrderSystem</string>
    <string name="dish_title_label">Title</string>
    <string name="dish_title_hint">Dish Title</string>
    <string name="dish_price_hint">Dish Price</string>
    <string name="dish_description_hint">Dish Description</string>
    <string name="dish_name">Dish Name</string>
    <string name="dish_save">Add New Dish</string>
    <string name="new_dish">New Dish</string>
    <string name="show_subtitle">Show Subtitle</string>
    <string name="hide_subtitle">Hide Subtitle</string>
    <string name="subtitle_format">%1$s dishes</string>
    <string name="price_label">Price</string>
    <string name="description_label">Description</string>
    <string name="add_to_shopping_cart">Add To Shopping Cart</string>
    <string name="check_out">Check Out</string>
    <string name="menu">Menu</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="my_order">My Order</string>
    <string name="my_info">My Info</string>
    <string name="total_price">Total Price: </string>
</resources>
