<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_marginLeft="@dimen/activity_horizontal_margin"
              android:layout_marginRight="@dimen/activity_horizontal_margin">

    <include layout="@layout/view_camera_and_title"></include>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1">
        <TextView
            android:text="@string/description_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?android:listSeparatorTextViewStyle"/>
        <EditText
            android:id="@+id/dish_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:hint="@string/dish_description_hint"/>
    </LinearLayout>
    <Button
        android:id="@+id/dishSave"
        android:text="@string/dish_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


</LinearLayout>