<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin">

            <ImageView
                android:id = "@+id/dish_photo"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:scaleType="centerInside"
                android:background="@android:color/darker_gray"
                android:cropToPadding="true"
                android:layout_marginRight="4dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dish_title_label"
                style="?android:listSeparatorTextViewStyle"/>
            <TextView
                android:id="@+id/dishName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15pt"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"/>
            <TextView
                android:text="@string/price_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="?android:listSeparatorTextViewStyle"/>
            <TextView
                android:id="@+id/dishPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"/>
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/dishDescription"
        android:textSize="10pt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"/>

    <Button
        android:id="@+id/dishOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_to_shopping_cart"/>


</LinearLayout>